# myenv

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  bash_profile.self  configure.ac
cfgfiles/: GJI_keymap  GJI_romantab  IrfanView_i_view32.ini  JStamper_Jstamper.ini  Makefile.am  README  REAMDE  TERATERM_TERATERM.INI  TERATERM_cygterm.cfg
dictool/: Makefile.am  anthy-dicdump.pl  anthy-dicload.pl  anthy2gji.rb  anthy2gji.rb.in  anthy2gji.sh.in  anthy2gji.yml  anthy2ime.rb  anthy2ime.rb.in  anthy2ime.sh.in  anthy2ime.yml
dotfiles/: Makefile.am  bashrc.self  emacs.el  gitconfig
emacs-lisp/: CJK-utf8.el  ELS-CFG  ELS-ELS  ELS-MK.in  Makefile.am  _diff.el  _org.el  _psvn.el  em.in  init-user.el  init.el
emacs-mini/: ELS-CFG  ELS-ELS  ELS-ELS.in  ELS-MK  Makefile.am  Makerule  _develock.el  _diff.el  _emacs.el  _org.el  _psvn.el  font-setup.el  subdir.ELS-CFG  subdir.ELS-ELS  subdir.Makefile.am
