dnl Process this file with autoconf to produce a configure script.
AC_INIT(dotfiles/bashrc.self)
AC_PREFIX_DEFAULT(${HOME})

AM_INIT_AUTOMAKE(myenv, 0.1)
dnl AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
dnl AC_PROG_CC
dnl AC_PROG_CPP
dnl AM_PROG_LIBTOOL

dnl AM_PATH_LISPDIR
dnl AM_CONDITIONAL(ELISP, test x$lispdir != x)
dnl lispdir="$lispdir/anthy"

AC_OUTPUT(Makefile
 dotfiles/Makefile
 cfgfiles/Makefile
 )
